new file:   Song.mp3 música principal 	modified:   estilos.css 	modified:   index.html se añade boton de incio 	modified:   prueba.js  se adapta para que funcione cuando se presione comenzar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
         <canvas id="myCanvas">
         </canvas>
     </div>
+
+    <div id="mensaje" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background: #f00; color: #fff;">
+        Juego terminado
+    </div>
+
+    <div class="contenedor">
+        <button id="iniciar" onclick="comenzar()">Comenzar</button>
+    </div>
+
+
     <script src="prueba.js"></script>
+
+    <audio src="Song.mp3" id="musicaFondo" preload="auto"></audio>
     
 </body>
 </html>
