arreglo de bug del pausa

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         <input type="color" id="colorSelector" name="colorSelector" value="#00E676" onchange="cambiarColorBloques(this.value)">
     </div>
 
+    <div class="controles">
+        <button style="margin-left: 70px; margin-bottom: 5px;">
+            <img src="arrow.png" width="50px" height="50'px" id="up">
+        </button>
+        <br>
+        <button>
+            <img src="arrow.png" width="50px" height="50'px" id="left">
+        </button>
+        <button>
+            <img src="arrow.png" width="50px" height="50'px" id="down" >
+        </button>
+        <button>
+            <img src="arrow.png" width="50px" height="50'px" id="right">
+        </button>
+    </div>
+
 
     <audio src="Song.mp3" id="musicaFondo" preload="auto"></audio>
     <audio src="gameOver.mp3" id="fin" preload="auto"></audio>
