--- a/index.html
+++ b/index.html
@@ -8,44 +8,46 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <div>
-        <button id="pause" onclick="play()">
-            <img src="pause.png" width="50px" height="50px">
-        </button>
-        <button id="play" onclick="play()">
-            <img src="play.png" width="50px" height="50px">
-        </button>
-    </div>
-
-    <div>
+    <div class="container">
         <h1>Tetris</h1>
-        <canvas id="myCanvas"></canvas>
+
+        <div class="controls">
+            <div class="volume">
+                <label for="volumen">Volumen: </label>
+                <input type="range" id="volumen" name="volumen" min="0" max="1" step="0.01" value="0.5" oninput="ajustarVolumen(this.value)">
+            </div>
+
+            <div class="color">
+                <label for="colorSelector">Color de Bloques: </label>
+                <input type="color" id="colorSelector" name="colorSelector" value="#00E676" onchange="cambiarColorBloques(this.value)">
+            </div>
+        </div>
+
+        <div class="canvas-container">
+            <canvas id="myCanvas"></canvas>
+            <div class="contenedor">
+                <button id="iniciar" onclick="comenzar()">Comenzar</button>
+            </div>
+        </div>
+
+        <div class="button-container">
+            <button id="leftButton" class="circular-button left-arrow"></button>
+            <button id="downButton" class="circular-button down-arrow"></button>
+            <button id="rightButton" class="circular-button right-arrow"></button>
+            <button id="rotateButton" class="circular-button rotate-button"></button>
+            <button id="pause" onclick="pauseGame()">
+                <img src="pause.png" alt="Pause">
+            </button>
+        </div>
+
+        <div id="mensaje" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background: #f00; color: #fff;">
+            Juego terminado
+        </div>
+
+        <audio src="Song.mp3" id="musicaFondo" preload="auto"></audio>
+        <audio src="gameOver.mp3" id="fin" preload="auto"></audio>
     </div>
 
-    <div id="mensaje" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background: #f00; color: #fff;">
-        Juego terminado
-    </div>
-
-    <div class="contenedor">
-        <button id="iniciar" onclick="comenzar()">Comenzar</button>
-    </div>
-
-    <div class="volume">
-        <label for="volumen">Volumen: </label>
-        <input type="range" id="volumen" name="volumen" min="0" max="1" step="0.01" value="0.5" oninput="ajustarVolumen(this.value)">
-    </div>
-
-    <div class="color">
-        <label for="colorSelector">Color de Bloques: </label>
-        <input type="color" id="colorSelector" name="colorSelector" value="#00E676" onchange="cambiarColorBloques(this.value)">
-    </div>
-
-
-
-
-    <audio src="Song.mp3" id="musicaFondo" preload="auto"></audio>
-    <audio src="gameOver.mp3" id="fin" preload="auto"></audio>
     <script src="prueba.js"></script>
-
 </body>
 </html>
