--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
             <button id="downButton" class="circular-button down-arrow"></button>
             <button id="rightButton" class="circular-button right-arrow"></button>
             <button id="rotateButton" class="circular-button rotate-button"></button>
-            <button id="pause" onclick="pauseGame()">
+            <button id="pause" onclick="play()">
                 <img src="pause.png" alt="Pause">
+            </button>
+            <button id="play" onclick="play()">
+                <img src="play.png" alt="Play">
             </button>
         </div>
 
