--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             </button>
         </div>
 
+        <div class="score-board">
+            <p>Puntuación: <span id="score">0</span></p>
+            <p>Lineas: <span id="lines">0</span></p>
+            <p>Mejor Puntuación: <span id="highscore">0</span></p>
+        </div>
+
         <div id="mensaje" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px; background: #f00; color: #fff;">
             Juego terminado
         </div>
